--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <h2>This is my favorite band Sunny Day Real Estate</h2>
         <p>They're playing In Circles from their 1994 album Diary</p>
     <video width="800" height="500" controls>
-        <source src="/images/SDRE.mp4" type="video/mp4">
-        <source src="/image/SDRE.ogg" type="video/ogg">
+        <source src="/portfolio/images/SDRE.mp4" type="video/mp4">
+        <source src="/portfolio/image/SDRE.ogg" type="video/ogg">
         Your browser does not support the video tag.
     </video>    
 </section>
@@ -53,22 +53,22 @@
             <!-- Carousel slides container -->
             <div class="slides">
                 <div class="slide">
-                    <img src="/images/Jimmie'sChickenShack.png" alt="Jimmie's Chicken Shack">
+                    <img src="/portfolio/images/Jimmie'sChickenShack.png" alt="Jimmie's Chicken Shack">
                 </div>
                 <div class="slide">
-                    <img src="/images/MarcyPlayground.png" alt="Marcy Playground">
+                    <img src="/portfolio/images/MarcyPlayground.png" alt="Marcy Playground">
                 </div>
                 <div class="slide">
-                    <img src="/images/TheSmashingPumpkins.png" alt="The Smashing Pumpkins">
+                    <img src="/portfolio/images/TheSmashingPumpkins.png" alt="The Smashing Pumpkins">
                 </div>
                 <div class="slide">
-                    <img src="/images/GreenDay.png" alt="Green Day">
+                    <img src="/portfolio/images/GreenDay.png" alt="Green Day">
                 </div>
                 <div class="slide">
-                    <img src="/images/TheFlamingLips.png" alt="The Flaming Lips">
+                    <img src="/portfolio/images/TheFlamingLips.png" alt="The Flaming Lips">
                 </div>
                 <div class="slide">
-                    <img src="/images/Weezer.png" alt="Weezer">
+                    <img src="/portfolio/images/Weezer.png" alt="Weezer">
                 </div>
             </div>
     
