--- a/resume.html
+++ b/resume.html
@@ -20,17 +20,17 @@
     <h1>Kyler Edwards</h1>
         <p>
             <a href="mailto:example@domain.com" class="contact-link">
-                <img src="images/email_icon.png" alt="Email" class="contact-icon">
+                <img src="/portfolio/images/email_icon.png" alt="Email" class="contact-icon">
                 kyky5kme@gmail.com
             </a>
             |  
             <a href="tel:5555555555" class="contact-link">
-                <img src="images/phone_icon.png" alt="Phone" class="contact-icon">
+                <img src="/portfolio/images/phone_icon.png" alt="Phone" class="contact-icon">
                 458-212-1081
             </a>
             |
             <a href="https://www.linkedin.com" class="contact-link">
-                <img src="images/linkdin_icon.png" alt="LinkedIn" class="contact-icon">
+                <img src="/portfolio/images/linkdin_icon.png" alt="LinkedIn" class="contact-icon">
                 LinkedIn
             </a>    
         </p>       
